samples/_failures_safe/1761598403_b967e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8ea6b3d.c:173: error: expected ‘;’, ‘,’ or ‘)’ at end of input
